# imfcfg

./: .gitignore  LICENSE  README.md  pyproject.toml
contrib/: event-config.json.dist  netboxrc.example
contrib/arista/: arista-ztp.sh  artnet-bridge.sh  autoreload.py  autoreload.sh
contrib/juniper/: autoreload.cron  autoreload.sh  install.sh
docs/: design.md
imfcfg/: c3cfg.py  c3site.py  junosparse.py
imfcfg/cli/: main.py
imfcfg/frontend/: main.py
imfcfg/interfaces/: __init__.py  helper.py  interfaces.py
imfcfg/loader/: main.py
imfcfg/nbh/: helper.py
imfcfg/render/: main.py
imfcfg/routing/: bgp.py
imfcfg/snmp/: tablewalk.py
imfcfg/util/: util.py
imfcfg/vlans/: __init__.py  vlans.py
